--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!----About section start---->
 <section class="about">
     <div class="main">
-        <img src="img/main-img.png">
+        <img src="./main-img.png">
         <div class="about-text">
             <h2>A propos de moi</h2>
             <h5>Developpeur <span>& Designer</span></h5>
